hasta 2do párrafo de Digital Badges vs Open Badges

--- a/wiki/OpenBadge_Es.wiki
+++ b/wiki/OpenBadge_Es.wiki
@@ -32,11 +32,19 @@ allegiance, membership, authority, achievement, etc. (Source: [http://dictionary
 
 Definiciones extraidas de la [http://lema.rae.es/drae/?val=insignia Real Académia Española]
 
-A badge is a symbol or indicator of an accomplishment, skill, quality or interest. From the Boy and Girl Scouts, to PADI diving instruction, to the more recently popular geo-location game, [https://foursquare.com/ Foursquare], badges have been successfully used to set goals, motivate behaviors, represent achievements and communicate success in many contexts. A “digital badge” is an online record of achievements, tracking the recipient’s communities of interaction that issued the badge and the work completed to get it. Digital badges can support connected learning environments by motivating learning and signaling achievement both within particular communities as well as across communities and institutions. (Source: [https://wiki.mozilla.org/images/5/59/OpenBadges-Working-Paper_012312.pdf Erin Knight White Paper])
+<!-- A badge is a symbol or indicator of an accomplishment, skill, quality or interest. From the Boy and Girl Scouts, to PADI diving instruction, to the more recently popular geo-location game, [https://foursquare.com/ Foursquare], badges have been successfully used to set goals, motivate behaviors, represent achievements and communicate success in many contexts. A “digital badge” is an online record of achievements, tracking the recipient’s communities of interaction that issued the badge and the work completed to get it. Digital badges can support connected learning environments by motivating learning and signaling achievement both within particular communities as well as across communities and institutions. (Source: [https://wiki.mozilla.org/images/5/59/OpenBadges-Working-Paper_012312.pdf Erin Knight White Paper])-->
 
-== Digital Badges vs Open Badges ==
 
-A digital badge is an online representation of a skill you’ve earned. Open Badges take that concept one step further, and allows you to verify your skills, interests and achievements through credible organizations and attaches that information to the badge image file, hard-coding the metadata for future access and review. Because the system is based on an open standard, earners can combine multiple badges from different issuers to tell the complete story of their achievements — both online and off. Badges can be displayed wherever earners want them on the web, and share them for employment, education or lifelong learning. 
+Un badge o insignia es un símbolo o indicador de un logro, habilidad, saber cualidad o interes. Desde ls chicos y chicas de los scouts, las esculas de buceo PADI o los más recientes y populares juegos de geolocalización, [https://foursquare.com/ Foursquare], las insignias se han utilizado con éxito para establecer objetivos, motivar comportamientos, representan logros y comunicar el éxito en muchos contextos. Una "insignia digital" es una registro online de logros, con un seguimiento de la comunidad de interacción que emitió esa insignia y de la tarea que se completó para obtenerla. Las insignias digitales o Digital badges pueden ser un apoyo a ambientes de parendizaje on line motivando el aprendizaje y marcando los logros obtenidos tanto en interior de comunidades de aprendizaje como a través de distintas comunidades e instituciones.
+(fuente: [https://wiki.mozilla.org/images/5/59/OpenBadges-Working-Paper_012312.pdf Erin Knight White Paper])
+
+<!--== Digital Badges vs Open Badges ==
+
+A digital badge is an online representation of a skill you’ve earned. Open Badges take that concept one step further, and allows you to verify your skills, interests and achievements through credible organizations and attaches that information to the badge image file, hard-coding the metadata for future access and review. Because the system is based on an open standard, earners can combine multiple badges from different issuers to tell the complete story of their achievements — both online and off. Badges can be displayed wherever earners want them on the web, and share them for employment, education or lifelong learning. -->
+== Digital Badges vs Open Badges o Insignias Digitales vs Insignias abiertas==
+Por ahora y hasta que se resuelvan las discusiones en torno a la localización de algunos términos, hemos de utilizar los términos Digital Badges y Open Badges en el idioma original. 
+
+Un badge digital es una representación online de una habilidad que has obtenido. Open Badges lleva ese concepto paso más allá, y le premite verificar sus habilidades, saberes, intereses y logros a trevés de organizaciones fiables y agrega esa información al archivo/imagen de la insignia, incrustando el metadato para su acceso o revisiones posteriores. Como el sistema está basado en estándares abiertos, los receptores de los badges pueden combinar multiples badges de difrentes emisores de manera que reflejen la histria completa de sus logros o saberes - de forma online como offline. Las insignias pueden ser mostradas en la web donde quienes las reciban deseen, y compartirlas para empleos, educación o aprendizajes continuos
 
 '''Open Badges are:'''
 
