--- a/wiki/OpenBadge_Es.wiki
+++ b/wiki/OpenBadge_Es.wiki
@@ -61,20 +61,31 @@ Un badge digital es una representación online de una habilidad que has obtenido
 *'''Acumulables:''' Ya sea que estén emitidos por una organización o muchas, las insignias/badges pueden construirse una sobre otra y ser apiladas para contar el recorrido completa de sus logros y saberes.
 *'''Basadas en evidencia:''' Las Insignias Abiertas o Open Badges son objetos ricos en información. Cada insignia contiene importantes metadatos que están dentro del código de la imagen de la insignia o badge y estos datos se enlazan al emisor, los criterios de emisión y la verificación del mismo.
 
-'''Open Badges make it easy to:'''
+<!--'''Open Badges make it easy to:'''-->
+''' Las Insignias Abiertas son fáciles para:'''
 
-*Get recognition for the things you learn;
+<!--*Get recognition for the things you learn;
 *Give recognition for the things you teach;
 *Verify skills; and
-*Display your verified badges across the web.
+*Display your verified badges across the web.-->
 
-== What is Mozilla's Open Badges project?  ==
+*Obtener reconocimiento de lo que aprende;
+*Otorgar reconocimento de lo que enseña;
+*Verificar saberes, habilidades; y
+*Mostrar sus insignias verificadas en toda la web.
 
-Learning today happens everywhere, not just in the classroom. But it's often difficult to get recognition for skills and achievements that happen outside of school. '''Mozilla's Open Badges project''' is working to solve that problem, making it easy for anyone to issue, earn and display badges across the web through a shared technical infrastructure. '''The result:''' helping people of all ages gain and display 21st century skills and unlock new career and educational opportunities.
+<!--== What is Mozilla's Open Badges project?  ==-->
 
-Want to know more about Open Badges? [https://wiki.mozilla.org/Badges/About Read about what badges are and how they work] and check out our [https://wiki.mozilla.org/Badges/FAQs Frequently Asked Questions] page to find some answers, or shoot us an email at [mailto:badges@mozillafoundation.org badges@mozillafoundation.org]
+== ¿Qué es el proyecto Mozilla Open Badges? ==
 
-== Mozilla BadgeKit ==
+<!--Learning today happens everywhere, not just in the classroom. But it's often difficult to get recognition for skills and achievements that happen outside of school. '''Mozilla's Open Badges project''' is working to solve that problem, making it easy for anyone to issue, earn and display badges across the web through a shared technical infrastructure. '''The result:''' helping people of all ages gain and display 21st century skills and unlock new career and educational opportunities.-->
+Hoy, el aprendizaje, sucede en todos lados, no sólo en los salones de clase. Pero generalmente es difícil obtener reconocimiento por los sabere, habilidades y logros que se obtienen fuera de las instituciones académicas. ''' El proyecto Open Badges de Mozilla''' trabaja para resolver ese problema, haciendo sencillo para cualquiera otorgar, ganar y mostrar insignias que reconozcan esos saberes en toda la web, a través de una infraestructura técnoca compartida. '''El resultado:''' ayudar a gente de todas las edades a ganar y mostrar saberes del siglo XXI y abrir nuevas carreras y oportunidades educativas.
+<!--Want to know more about Open Badges? [https://wiki.mozilla.org/Badges/About Read about what badges are and how they work] and check out our [https://wiki.mozilla.org/Badges/FAQs Frequently Asked Questions] page to find some answers, or shoot us an email at [mailto:badges@mozillafoundation.org badges@mozillafoundation.org]-->
+
+¿Quiéren saber más sobre Open Badges?  [https://wiki.mozilla.org/Badges/About Enterate de lo que las insignias son y cómo funcionan] y chequeá nuestra página de  [https://wiki.mozilla.org/Badges/FAQs Preguntas Frecuentes], o envianos un email a [mailto:badges@mozillafoundation.org badges@mozillafoundation.org]
+
+<!--== Mozilla BadgeKit ==-->
+== BadgeKit de Mozilla ==
 
 Mozilla BadgeKit is a new set of open, foundational tools to make the badging process easy.
 
