--- a/wiki/OpenBadge_Es.wiki
+++ b/wiki/OpenBadge_Es.wiki
@@ -79,7 +79,7 @@ Un badge digital es una representación online de una habilidad que has obtenido
 == ¿Qué es el proyecto Mozilla Open Badges? ==
 
 <!--Learning today happens everywhere, not just in the classroom. But it's often difficult to get recognition for skills and achievements that happen outside of school. '''Mozilla's Open Badges project''' is working to solve that problem, making it easy for anyone to issue, earn and display badges across the web through a shared technical infrastructure. '''The result:''' helping people of all ages gain and display 21st century skills and unlock new career and educational opportunities.-->
-Hoy, el aprendizaje, sucede en todos lados, no sólo en los salones de clase. Pero generalmente es difícil obtener reconocimiento por los sabere, habilidades y logros que se obtienen fuera de las instituciones académicas. ''' El proyecto Open Badges de Mozilla''' trabaja para resolver ese problema, haciendo sencillo para cualquiera otorgar, ganar y mostrar insignias que reconozcan esos saberes en toda la web, a través de una infraestructura técnoca compartida. '''El resultado:''' ayudar a gente de todas las edades a ganar y mostrar saberes del siglo XXI y abrir nuevas carreras y oportunidades educativas.
+Hoy, el aprendizaje, sucede en todos lados, no sólo en los salones de clase. Pero generalmente es difícil obtener reconocimiento por los sabere, habilidades y logros que se obtienen fuera de las instituciones académicas. ''' El proyecto Open Badges de Mozilla''' trabaja para resolver ese problema, haciendo sencillo para cualquiera otorgar, ganar y mostrar insignias que reconozcan esos saberes en toda la web, a través de una infraestructura técnica compartida. '''El resultado:''' ayudar a gente de todas las edades a ganar y mostrar saberes del siglo XXI y abrir nuevas carreras y oportunidades educativas.
 <!--Want to know more about Open Badges? [https://wiki.mozilla.org/Badges/About Read about what badges are and how they work] and check out our [https://wiki.mozilla.org/Badges/FAQs Frequently Asked Questions] page to find some answers, or shoot us an email at [mailto:badges@mozillafoundation.org badges@mozillafoundation.org]-->
 
 ¿Quiéren saber más sobre Open Badges?  [https://wiki.mozilla.org/Badges/About Enterate de lo que las insignias son y cómo funcionan] y chequeá nuestra página de  [https://wiki.mozilla.org/Badges/FAQs Preguntas Frecuentes], o envianos un email a [mailto:badges@mozillafoundation.org badges@mozillafoundation.org]
@@ -87,22 +87,32 @@ Hoy, el aprendizaje, sucede en todos lados, no sólo en los salones de clase. Pe
 <!--== Mozilla BadgeKit ==-->
 == BadgeKit de Mozilla ==
 
-Mozilla BadgeKit is a new set of open, foundational tools to make the badging process easy.
+<!--Mozilla BadgeKit is a new set of open, foundational tools to make the badging process easy.-->
+BadgeKit de Mozilla es un nuevo set de herramientas abiertas y fundamentales para hacer simple el proceso de emitir y ganar insignias o badges
 
-'''BadgeKit:'''
+<!--'''BadgeKit:'''
 *Supports key stages in the badging experience including creating, designing, assessing and issuing. 
 *Includes remixable templates and milestone badges allowing for easy customization.
-*Provides modular and open options (standards) for the community of  badge makers to use and build upon within their existing sites or systems.
+*Provides modular and open options (standards) for the community of  badge makers to use and build upon within their existing sites or systems.-->
+'''BadgeKit:'''
+*Da soporte a etapas claves en el proceso de creación, diseño evaluación y emisión de insignias.
+*Incluyes plantillas remixables e insignias de logros/saberes prediseñadas para adaptarlas facilmente.
+*Provee opciones abiertas y modulares (estándares) para que la comunidad de creadores de insignias  use o utilice en sus propios sitios o sistemas.
 
-BadgeKit is now available in private beta for select partner organizations that meet specific technical requirements. Alternatively, anyone can download the code from GitHub and implement it on their own servers. 
+<!--BadgeKit is now available in private beta for select partner organizations that meet specific technical requirements. Alternatively, anyone can download the code from GitHub and implement it on their own servers.-->
+BadgeKit está disponible en beta privada para organizaciones y socios seleccionados que cumplen con los requisitos técnicos. De todas maneras, cualquiera puede bajar el código desde GitHub e implementarlo en sus propios servidores.
 
-We will continue to add additional BadgeKit features throughout the coming year, including tools to support collecting, sharing and discovering badges.
+<!--We will continue to add additional BadgeKit features throughout the coming year, including tools to support collecting, sharing and discovering badges.-->
+Seguiremos incluyendo características adicionales a Badgekit durante este año, incluyendo herramientas que para juntar, compartir y encontrar insignias o badges.
 
-You can apply for access to the private beta hosted version of BadgeKit at http://www.badgekit.org, or grab the code for each tool from Github today at https://github.com/mozilla/openbadges-badgekit 
+<!--You can apply for access to the private beta hosted version of BadgeKit at http://www.badgekit.org, or grab the code for each tool from Github today at https://github.com/mozilla/openbadges-badgekit -->
+Puede solicitar acceso a la beta privada de BadgeKit en http://www.badgekit.org, o tomar el código de cada herramienta desde Github en https://github.com/mozilla/openbadges-badgekit
+<!--For general information on BadgeKit, and to join our community, check out http://badgekit.openbadges.org-->
+Para información general sobre BadgeKit, o para sumarse a nuestra comunidad eche un vistazo a http://badgekit.openbadges.org
 
-For general information on BadgeKit, and to join our community, check out http://badgekit.openbadges.org
+<!--[[Badges/badgekit|Read more about BadgeKit]]-->
+[[Badges/badgekit|Leer más sobre BadgeKit]]
 
-[[Badges/badgekit|Read more about BadgeKit]]
 
 == Get started with Open Badges  ==
 
