--- a/wiki/OpenBadge_Es.wiki
+++ b/wiki/OpenBadge_Es.wiki
@@ -114,25 +114,34 @@ Para información general sobre BadgeKit, o para sumarse a nuestra comunidad ech
 [[Badges/badgekit|Leer más sobre BadgeKit]]
 
 
-== Get started with Open Badges  ==
-
-;Ready? Check out our site and Community page
+<!--== Get started with Open Badges  ==-->
+== Empezando con Open Badges ==
+<!--;Ready? Check out our site and Community page
+:*http://openbadges.org
+:*http://community.openbadges.org/-->
+;¿Listos? Eche un vistazo a nuestro sitio y a la página de la comunidad
 :*http://openbadges.org
 :*http://community.openbadges.org/
 
-;Set? Create your Backpack
+<!--;Set? Create your Backpack
+:*https://backpack.openbadges.org-->
+;¿Preparados? Cree su Mochila
 :*https://backpack.openbadges.org
 
-;Go! Get some Badges!
-:*Take the [http://openbadges.org/earn/ Badges 101 Quiz] and earn your first badge!
-
-Read more about the [https://github.com/mozilla/openbadges#mozilla-open-badges Technology] behind Open Badges.
+<!--;Go! Get some Badges!
+:*Take the [http://openbadges.org/earn/ Badges 101 Quiz] and earn your first badge!-->
+;¡Ya! ¡Obtenga algunos badges!
+:*¡Haga el [http://openbadges.org/earn/  test inicial] y gane sus primeras insignias o badges!
+<!--Read more about the [https://github.com/mozilla/openbadges#mozilla-open-badges Technology] behind Open Badges.-->
+Leer más sobre la [https://github.com/mozilla/openbadges#mozilla-open-badges Tecnología] detrás de Open Badges.
 <br>
-Find the [https://github.com/mozilla/openbadges/wiki Onboarding information for Issuers, Displayers and Earners] and get started!
+<!--Find the [https://github.com/mozilla/openbadges/wiki Onboarding information for Issuers, Displayers and Earners] and get started!-->
+¡Ver la [https://github.com/mozilla/openbadges/wiki información de abordo para emisores, expositores y destinatarios] y ponga manos a la obra!
 
-== Become part of the Community ==
+<!--== Become part of the Community ==-->
+== Forme parte de la comunidad ==
 
-*[https://groups.google.com/d/forum/openbadges '''Open Badges learning group'''] and [https://groups.google.com/forum/#!forum/openbadges-dev '''development group'''] -- Subscribe to these groups to take part in ongoing conversations about badges in the wild.
+<!--*[https://groups.google.com/d/forum/openbadges '''Open Badges learning group'''] and [https://groups.google.com/forum/#!forum/openbadges-dev '''development group'''] -- Subscribe to these groups to take part in ongoing conversations about badges in the wild.
 *[https://openbadges.etherpad.mozilla.org/openbadges-community-2 '''Open Badges Community Calls'''] -- Join our weekly global call every Wednesday at 9am PT / 12pm ET / 5pm GMT. During these hour-long calls we share our progress and encourage you to share your Open Badges work, questions, and comments. They're fun and we encourage you to come along!
 *[https://openbadges.etherpad.mozilla.org/research-calls '''Open Badges Research & Design Calls'''] -- If you are interested in Open Badges Research and Badge System Design, join this call, held on Wednesdays in the hour before the Community Calls, at 8am PT / 11am ET / 4pm GMT.
 *[http://openbadges.tumblr.com// '''Open Badges Blog'''] -- Follow our blog for Open Badges news and updates.
@@ -140,35 +149,66 @@ Find the [https://github.com/mozilla/openbadges/wiki Onboarding information for 
 *[https://www.facebook.com/MozillaOpenBadges '''Facebook'''] -- Like us on Facebook for news and updates you can share with your networks.
 *[https://wiki.mozilla.org/IRC '''IRC'''] -- Reach us on IRC at irc.mozilla.org, #badges
 *[[Media:Open_Badges_Presentation_-_General.pdf‎| '''Open Badges presentation materials''']] -- Want to give an Open Badges presentation? To get you started, here's a PDF. Please note that all of these documents are [https://creativecommons.org/licenses/by-sa/2.0/ CC by SA].
-*[https://docs.google.com/document/d/1aTAP04N9dAuSGv71tWOUA1iqYxWWTA4dlQIyP-7WT0E/edit '''Common badges terms and vocabulary'''] -- Help us to build a common lexicon of digital badge terms.
+*[https://docs.google.com/document/d/1aTAP04N9dAuSGv71tWOUA1iqYxWWTA4dlQIyP-7WT0E/edit '''Common badges terms and vocabulary'''] -- Help us to build a common lexicon of digital badge terms.-->
+*[https://groups.google.com/d/forum/openbadges '''Grupo de aprendizaje de Open Badges'''] y [https://groups.google.com/forum/#!forum/openbadges-dev '''grupo de desarrollo'''] -- Suscribirse a estos grupos para participar en las conversaciones en curso acerca de insignias
+*[https://openbadges.etherpad.mozilla.org/openbadges-community-2 '''Llamadas comunitarias de Open Badges'''] -- Unase a nustras llamadas globales semanales todos los miércoles a las 9am PT / 12pm ET / 5pm GMT. Durante estas llamadas de una hora compartimos nuestros progresos y fomentamos que comparta su trabajo en Open Badges, respondemos preguntas y comentarios. ¡Son divertidas esta invitado a participar!
+*[https://openbadges.etherpad.mozilla.org/research-calls '''Llamadas de investigación y Diseño'''] -- Si está interesado en la investigación sobre Open Badges y en el diseño del sistema de Open Badges, unase a esta llamda los miércoles, una hora antes de la llamada comunitaria a las 8am PT / 11am ET / 4pm GMT.
+*[http://openbadges.tumblr.com// '''Blog de Open Badges'''] -- Siga las noticias y actualizaciones desde nuestro blog de Open Badges.
+*[http://twitter.com/#!/openbadges '''Twitter'''] -- Siga @OpenBadges y use el hashtag [https://twitter.com/search?q=%23OpenBadges&src=typd #OpenBadges] para unirse a la conversación en Twitter.
+*[https://www.facebook.com/MozillaOpenBadges '''Facebook'''] -- Búscanos en Facebook para compartir en sus perfiles noticias y actualizaciones.
+*[https://wiki.mozilla.org/IRC '''IRC'''] -- Encuentrenos en IRC en irc.mozilla.org, #badges
+*[[Media:Open_Badges_Presentation_-_General.pdf‎| '''Materiales para presentationes de Open Badges''']] -- ¿Quiere dar una presentación sobre Open Badges? Para que empiece, acá hay un PDF. Tenga en cuenta que todos estos documentos son [https://creativecommons.org/licenses/by-sa/2.0/ CC by SA].
+*[https://docs.google.com/document/d/1aTAP04N9dAuSGv71tWOUA1iqYxWWTA4dlQIyP-7WT0E/edit '''Términos y vocabulario común'''] -- Ayudenos a construir un vocabulario y léxico común de terminos sobre insignias digitales.
 
-== Who is using Open Badges? ==
-
-*[http://openmatt.wordpress.com/2011/03/17/badges-in-the-real-world/ '''User stories'''] -- Hypothetical examples of how badges can help solve problems in everyday scenarios.<br> 
+<!--== Who is using Open Badges? ==-->
+== ¿Quién está usando Open Badges?
+<!--*[http://openmatt.wordpress.com/2011/03/17/badges-in-the-real-world/ '''User stories'''] -- Hypothetical examples of how badges can help solve problems in everyday scenarios.<br> 
 *[http://www.2mbetterfutures.org/ '''2 Million Better Futures'''] -- This project from [http://www.cgiamerica.org/ CGI America] aims to help 1 million workers and 1 million students succeed using Open Badges by 2016.
 *[http://chicagosummeroflearning.org/about '''Chicago Summer of Learning'''] -- The first citywide badging initiative, which was so successful that [http://www.enewspf.com/school-news/45425-mayor-emanuel-announces-nearly-100-000-badges-awarded-through-chicago-summer-of-learning.html '''Mayor Emmanuel committed to continuing the program next year.''']
 *[http://www.openbadges.org/participating-issuers/ '''Participating Issuers'''] -- An updated list of badge issuers and designers.
 *[http://bit.ly/platform-chart '''General Badge Issuing Platform Chart'''] -- A list of platforms for issuing open badges generated and continuously updated by the community.
 *[http://blog.makewav.es/2013/08/05/open-badges-for-schools-what-are-the-options/ '''Badges for School Issuer Platforms'''] -- Badge issuing platforms for schools.
-*[https://wiki.mozilla.org/Badges/Issuers '''Add your organization!'''] -- If you're issuing, designing or exploring open badges with your communities, add your organization to our list of issuers.
+*[https://wiki.mozilla.org/Badges/Issuers '''Add your organization!'''] -- If you're issuing, designing or exploring open badges with your communities, add your organization to our list of issuers.-->
 
-== Further Reading  ==
+*[http://openmatt.wordpress.com/2011/03/17/badges-in-the-real-world/ '''Historias de usuarios'''] -- Ejemplos hipotéticos sobre como los badges pueden resolver problemas en escenarios de la vida real.<br> 
+*[http://www.2mbetterfutures.org/ '''2 Million Better Futures'''] -- Este proyecto de [http://www.cgiamerica.org/ CGI America] tiene como objetivo ayudar a 1 millón de trabajadores y 1 millón de estudiantes a tener éxito usando Insignias Abiertas o Open badges para el 2016.
+*[http://chicagosummeroflearning.org/about '''Chicago Summer of Learning'''] -- La primera iniciativa de credencialización en toda la ciudad, que tuvo tanto éxito que [http://www.enewspf.com/school-news/45425-mayor-emanuel-announces-nearly-100-000-badges-awarded-through-chicago-summer-of-learning.html '''el Alcade Emmanuel se comprometió a continuar el progrma por un año más.''']
+*[http://www.openbadges.org/participating-issuers/ '''Los emisores participantes'''] -- Una lista actualizada de emisores y diseñadores de insignias o badges.
+*[http://bit.ly/platform-chart '''Grilla general de plataformas emisoras de Insignias o Badges'''] -- Una lista de plataformas para emitir insignias abiertas o open badges generada y actualizada continuamente por la comunidad.
+*[http://blog.makewav.es/2013/08/05/open-badges-for-schools-what-are-the-options/ '''Plataforma emisora de insignias o badges para escuelas'''] -- Plataformas de emisión Insignia para las escuelas.
+*[https://wiki.mozilla.org/Badges/Issuers '''¡Agregue su organización!'''] -- Si es un emisor, diseñador o está explorando las  insignias abiertas u open badges con su comunidad, agregué su organización a nuestra lista de emisores.
 
-*[https://wiki.mozilla.org/File:OpenBadges-Working-Paper_012312.pdf '''White Paper'''] -- An in-depth look at how badges can reinvent 21st century learning<br> 
+<!--== Further Reading  ==-->
+== Lectura Adicional ==
+
+<!--*[https://wiki.mozilla.org/File:OpenBadges-Working-Paper_012312.pdf '''White Paper'''] -- An in-depth look at how badges can reinvent 21st century learning<br> 
 *[http://bit.ly/badgevalidation '''Open Badges Validation Paper'''] -- An exploration of how to build an open and distributed accreditation system for badges and the organizations that issue them<br>
 *[http://www.scoop.it/t/badges-for-lifelong-learning/?tag=Sheryl+Grant '''Press coverage'''] -- A collection of articles and related items from community member [http://www.hastac.org/users/slgrant Sheryl Grant] (new Press Coverage page coming soon!)
 *[https://wiki.mozilla.org/Badges/roadmap '''Open Badges roadmap'''] -- We're continually updating the roadmap with new features.
-*[http://dmlcompetition.net '''Digital Media and Learning Competition: Badges for LifeLong Learning'''] (administered by HASTAC and funded by MacArthur) -- click to learn more.
+*[http://dmlcompetition.net '''Digital Media and Learning Competition: Badges for LifeLong Learning'''] (administered by HASTAC and funded by MacArthur) -- click to learn more.-->
 
-== Press Inquiries ==
+*[https://wiki.mozilla.org/File:OpenBadges-Working-Paper_012312.pdf '''White Paper'''] -- Una mirada en profundidad la forma en que las insignias pueden reinventar el aprendizaje del siglo 21.<br> 
+*[http://bit.ly/badgevalidation '''Open Badges Validation Paper'''] -- Una exploración de cómo construir un sistema de acreditación abierto y distribuido para las insignias y las organizaciones que las emiten<br>
+*[http://www.scoop.it/t/badges-for-lifelong-learning/?tag=Sheryl+Grant '''Press coverage'''] -- Una colección de notas y artículos relacionados del miembro de la comunidad [http://www.hastac.org/users/slgrant Sheryl Grant] (¡En breve una nueva página con la cobertura de la prensa!)
+*[https://wiki.mozilla.org/Badges/roadmap '''Open Badges roadmap'''] -- Estamos continuamente actualizando la hoja de ruta con las nuevas características..
+*[http://dmlcompetition.net '''Digital Media and Learning Competition: Badges for LifeLong Learning'''] (administered by HASTAC and funded by MacArthur) -- click para saber más.
 
-Please contact [mailto:press@mozilla.com press@mozilla.com].
 
-== Get involved with Mozilla  ==
+<!--== Press Inquiries ==-->
+== Consultas de prensa ==
+<!--Please contact [mailto:press@mozilla.com press@mozilla.com].-->
+Por favor contactarse a [mailto:press@mozilla.com press@mozilla.com].
 
-*[http://join.mozilla.org '''Join Mozilla'''] -- you could get a snazzy t-shirt for joining!
+<!--== Get involved with Mozilla  ==-->
+== Participar en Mozilla ==
+<!--*[http://join.mozilla.org '''Join Mozilla'''] -- you could get a snazzy t-shirt for joining!
 *[http://www.mozilla.org/about/mission.html '''Mozilla's mission'''] -- Read more about our mission to promote openness, innovation & opportunity on the Web.
 *[https://www.facebook.com/mozilla '''Like Mozilla on Facebook'''] and [http://twitter.com/mozilla '''Follow Mozilla on Twitter''']
-*[https://donate.mozilla.org/Sign-Up '''Get updates from Mozilla'''] -- Be the first to know what we're doing and how you can get involved.
+*[https://donate.mozilla.org/Sign-Up '''Get updates from Mozilla'''] -- Be the first to know what we're doing and how you can get involved.-->
+
+*[http://join.mozilla.org '''Unirse a  Mozilla'''] -- ¡Puede obtener una elegante remera uniendose!
+*[http://www.mozilla.org/about/mission.html '''Misión de Mozilla'''] -- Leer más sobre nuestra misión para promover la apertura, innovación y oportunidades en la Web.
+*[https://www.facebook.com/mozilla '''Busque a Mozilla en Facebook'''] y [http://twitter.com/mozilla '''Siga a Mozilla en Twitter''']
+*[https://donate.mozilla.org/Sign-Up '''Obtenga actualizaciones de Mozilla'''] -- Sea el primero en saber que estamos hacienodo y como involucrarse en los proyectos.
 
 [[Image:Open_Badges_napkin_sketch.png|800px]]
